# bakalarska-praca-blackjack

./: card.py  constants.py  game.py  hand.py  history.py  player.py  pyproject.toml  statistics.py  table.py  utilities.py
Players/: anchoring_player.py  availability_heuristic_player.py  gamblers_fallacy.py  hot_hand_fallacy_player.py  optimal_player.py  random_player.py  sunk_cost_fallacy.py
