[tool.poetry]
name = "pokersimulator"
version = "0.1.0"
description = ""
authors = ["Norbert Krivy <norokrivy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
phevaluator = "^0.5.3.1"
pygame = "^2.6.1"
requests = "^2.32.3"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
